# quiz_game

./: main.py  manage.py  pyproject.toml
Quiz_Game/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_topicinfo_topic_quizresult.py  0002_customuser_average_score_customuser_best_score.py  0003_alter_customuser_average_score_and_more.py  0003_alter_customuser_registration_number.py  0004_alter_customuser_average_score_and_more.py  0004_subject.py  0005_alter_customuser_average_score_and_more.py  0005_alter_subject_topic_count.py  0006_alter_customuser_registration_number.py  0006_alter_subject_options_topic.py  0007_alter_topic_options_remove_topic_learning_objectives_and_more.py  0007_quizquestion_order.py  0008_remove_customuser_average_score_and_more.py
core/static/core/css/: dashboard.css  landing.css  login.css  profile_settings.css  quiz.css  results.css  signup.css  subjects.css  topics.css  topics_info.css
core/static/core/js/: dashboard.js  login.js  profile_settings.js  quiz.js  results.js  signup.js  subjects.js  topics.js  topics_info.js
core/templates/core/: dashboard.html  landing.html  login.html  profile_settings.html  quiz.html  results.html  signup.html  subjects.html  topics.html  topics_info.html
static/css/: navbar_footer.css
static/js/: navbar_footer.js
templates/: main.html
